feat: setup desktopMain